--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Maps\SHFW\SHFW_SHFW_QMFSSMJBXX_Map.cs" />
     <Compile Include="Maps\SHFW\SHFW_SHFW_SHPSJBXX_Map.cs" />
     <Compile Include="Maps\SHFW\SHFW_WXFW_SJSMWXJBXX_Map.cs" />
+    <Compile Include="Maps\SWFW\SWFW_BGSBWXJBXX_Map.cs" />
     <Compile Include="Maps\SWFW\SWFW_BXJBXX_Map.cs" />
     <Compile Include="Maps\SWFW\SWFW_CWKJPGJBXX_Map.cs" />
     <Compile Include="Maps\SWFW\SWFW_FLZXJBXX_Map.cs" />
@@ -193,6 +194,7 @@
     <Compile Include="Maps\SWFW\SWFW_YSBZJBXX_Map.cs" />
     <Compile Include="Maps\SWFW\SWFW_ZHFWJBXX_Map.cs" />
     <Compile Include="Maps\SWFW\SWFW_ZKJBXX_Map.cs" />
+    <Compile Include="Maps\SWFW\SWFW_ZLJBXX_Map.cs" />
     <Compile Include="Maps\SWFW\SWFW_ZXFWJBXX_Map.cs" />
     <Compile Include="Maps\SZMX_Map.cs" />
     <Compile Include="Maps\BZZX\BZZX_WZJY_Map.cs" />
@@ -350,6 +352,7 @@
     <Compile Include="Models\SHFW\SHFW_SHFW_QMFSSMJBXX.cs" />
     <Compile Include="Models\SHFW\SHFW_SHFW_SHPSJBXX.cs" />
     <Compile Include="Models\SHFW\SHFW_WXFW_SJSMWXJBXX.cs" />
+    <Compile Include="Models\SWFW\SWFW_BGSBWXJBXX.cs" />
     <Compile Include="Models\SWFW\SWFW_BXJBXX.cs" />
     <Compile Include="Models\SWFW\SWFW_CWKJPGJBXX.cs" />
     <Compile Include="Models\SWFW\SWFW_FLZXJBXX.cs" />
@@ -369,6 +372,7 @@
     <Compile Include="Models\SWFW\SWFW_YSBZJBXX.cs" />
     <Compile Include="Models\SWFW\SWFW_ZHFWJBXX.cs" />
     <Compile Include="Models\SWFW\SWFW_ZKJBXX.cs" />
+    <Compile Include="Models\SWFW\SWFW_ZLJBXX.cs" />
     <Compile Include="Models\SWFW\SWFW_ZXFWJBXX.cs" />
     <Compile Include="Models\SZMX.cs" />
     <Compile Include="Models\BZZX\WZYJ.cs" />
