--- a/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
+++ b/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
@@ -163,6 +163,7 @@
     <Compile Include="SHFW\ISHFW_SHFW_QMFSSMBLL.cs" />
     <Compile Include="SHFW\ISHFW_SHFW_SHPSBLL.cs" />
     <Compile Include="SHFW\ISHFW_WXFW_SJSMWXBLL.cs" />
+    <Compile Include="SWFW\ISWFW_BGSBWXBLL.cs" />
     <Compile Include="SWFW\ISWFW_BXBLL.cs" />
     <Compile Include="SWFW\ISWFW_CWKJPGBLL.cs" />
     <Compile Include="SWFW\ISWFW_FLZXBLL.cs" />
@@ -182,6 +183,7 @@
     <Compile Include="SWFW\ISWFW_YSBZBLL.cs" />
     <Compile Include="SWFW\ISWFW_ZHFWBLL.cs" />
     <Compile Include="SWFW\ISWFW_ZKBLL.cs" />
+    <Compile Include="SWFW\ISWFW_ZLBLL.cs" />
     <Compile Include="SWFW\ISWFW_ZXFWBLL.cs" />
     <Compile Include="XXYL\IXXYL_DIYSGFBLL.cs" />
     <Compile Include="XXYL\IXXYL_HPGBLL.cs" />
