--- a/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
+++ b/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
@@ -156,6 +156,7 @@
     <Compile Include="BLL\SHFW\SHFW_SHFW_QMFSSMBLL.cs" />
     <Compile Include="BLL\SHFW\SHFW_SHFW_SHPSBLL.cs" />
     <Compile Include="BLL\SHFW\SHFW_WXFW_SJSMWXBLL.cs" />
+    <Compile Include="BLL\SWFW\SWFW_BGSBWXBLL.cs" />
     <Compile Include="BLL\SWFW\SWFW_BXBLL.cs" />
     <Compile Include="BLL\SWFW\SWFW_CWKJPGBLL.cs" />
     <Compile Include="BLL\SWFW\SWFW_FLZXBLL.cs" />
@@ -175,6 +176,7 @@
     <Compile Include="BLL\SWFW\SWFW_YSBZBLL.cs" />
     <Compile Include="BLL\SWFW\SWFW_ZHFWBLL.cs" />
     <Compile Include="BLL\SWFW\SWFW_ZKBLL.cs" />
+    <Compile Include="BLL\SWFW\SWFW_ZLBLL.cs" />
     <Compile Include="BLL\SWFW\SWFW_ZXFWBLL.cs" />
     <Compile Include="BLL\WDFBBLL.cs" />
     <Compile Include="BLL\WDSCBLL.cs" />
