--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -177,12 +177,15 @@
     <Compile Include="Maps\SWFW\SWFW_BGSBWXJBXX_Map.cs" />
     <Compile Include="Maps\SWFW\SWFW_BXJBXX_Map.cs" />
     <Compile Include="Maps\SWFW\SWFW_CWKJPGJBXX_Map.cs" />
+    <Compile Include="Maps\SWFW\SWFW_DBQZQZJBXX_Map.cs" />
     <Compile Include="Maps\SWFW\SWFW_FLZXJBXX_Map.cs" />
     <Compile Include="Maps\SWFW\SWFW_FYSJJBXX_Map.cs" />
     <Compile Include="Maps\SWFW\SWFW_GGCMJBXX_Map.cs" />
     <Compile Include="Maps\SWFW\SWFW_GSZCJBXX_Map.cs" />
     <Compile Include="Maps\SWFW\SWFW_HYWLJBXX_Map.cs" />
     <Compile Include="Maps\SWFW\SWFW_HYZXJBXX_Map.cs" />
+    <Compile Include="Maps\SWFW\SWFW_JXSBWXJBXX_Map.cs" />
+    <Compile Include="Maps\SWFW\SWFW_JZWXJBXX_Map.cs" />
     <Compile Include="Maps\SWFW\SWFW_KDJBXX_Map.cs" />
     <Compile Include="Maps\SWFW\SWFW_LPDZJBXX_Map.cs" />
     <Compile Include="Maps\SWFW\SWFW_PHZPJBXX_Map.cs" />
@@ -355,12 +358,15 @@
     <Compile Include="Models\SWFW\SWFW_BGSBWXJBXX.cs" />
     <Compile Include="Models\SWFW\SWFW_BXJBXX.cs" />
     <Compile Include="Models\SWFW\SWFW_CWKJPGJBXX.cs" />
+    <Compile Include="Models\SWFW\SWFW_DBQZQZJBXX.cs" />
     <Compile Include="Models\SWFW\SWFW_FLZXJBXX.cs" />
     <Compile Include="Models\SWFW\SWFW_FYSJJBXX.cs" />
     <Compile Include="Models\SWFW\SWFW_GGCMJBXX.cs" />
     <Compile Include="Models\SWFW\SWFW_GSZCJBXX.cs" />
     <Compile Include="Models\SWFW\SWFW_HYWLJBXX.cs" />
     <Compile Include="Models\SWFW\SWFW_HYZXJBXX.cs" />
+    <Compile Include="Models\SWFW\SWFW_JXSBWXJBXX.cs" />
+    <Compile Include="Models\SWFW\SWFW_JZWXJBXX.cs" />
     <Compile Include="Models\SWFW\SWFW_KDJBXX.cs" />
     <Compile Include="Models\SWFW\SWFW_LPDZJBXX.cs" />
     <Compile Include="Models\SWFW\SWFW_PHZPJBXX.cs" />
