--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -392,12 +392,15 @@
     <Content Include="Areas\Business\Css\SWFW\SWFW_BGSBWX.css" />
     <Content Include="Areas\Business\Css\SWFW\SWFW_BX.css" />
     <Content Include="Areas\Business\Css\SWFW\SWFW_CWKJPG.css" />
+    <Content Include="Areas\Business\Css\SWFW\SWFW_DBQZQZ.css" />
     <Content Include="Areas\Business\Css\SWFW\SWFW_FLZX.css" />
     <Content Include="Areas\Business\Css\SWFW\SWFW_FYSJ.css" />
     <Content Include="Areas\Business\Css\SWFW\SWFW_GGCM.css" />
     <Content Include="Areas\Business\Css\SWFW\SWFW_GSZC.css" />
     <Content Include="Areas\Business\Css\SWFW\SWFW_HYWL.css" />
     <Content Include="Areas\Business\Css\SWFW\SWFW_HYZX.css" />
+    <Content Include="Areas\Business\Css\SWFW\SWFW_JXSBWX.css" />
+    <Content Include="Areas\Business\Css\SWFW\SWFW_JZWX.css" />
     <Content Include="Areas\Business\Css\SWFW\SWFW_KD.css" />
     <Content Include="Areas\Business\Css\SWFW\SWFW_LPDZ.css" />
     <Content Include="Areas\Business\Css\SWFW\SWFW_PHZP.css" />
@@ -692,12 +695,18 @@
     <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_WXFW_SJSMWXYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\SWFW\SWFW_BGSBWX.js" />
     <Content Include="Areas\Business\Scripts\Business\SWFW\SWFW_BGSBWXYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\SWFW\SWFW_DBQZQZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\SWFW\SWFW_DBQZQZYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\SWFW\SWFW_FYSJ.js" />
     <Content Include="Areas\Business\Scripts\Business\SWFW\SWFW_FYSJYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\SWFW\SWFW_HYWL.js" />
     <Content Include="Areas\Business\Scripts\Business\SWFW\SWFW_HYWLYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\SWFW\SWFW_HYZX.js" />
     <Content Include="Areas\Business\Scripts\Business\SWFW\SWFW_HYZXYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\SWFW\SWFW_JXSBWX.js" />
+    <Content Include="Areas\Business\Scripts\Business\SWFW\SWFW_JXSBWXYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\SWFW\SWFW_JZWX.js" />
+    <Content Include="Areas\Business\Scripts\Business\SWFW\SWFW_JZWXYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\SWFW\SWFW_KD.js" />
     <Content Include="Areas\Business\Scripts\Business\SWFW\SWFW_KDYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\SWFW\SWFW_ZL.js" />
@@ -1261,12 +1270,15 @@
     <Compile Include="Areas\Business\Controllers\SWFW\SWFW_BGSBWXController.cs" />
     <Compile Include="Areas\Business\Controllers\SWFW\SWFW_BXController.cs" />
     <Compile Include="Areas\Business\Controllers\SWFW\SWFW_CWKJPGController.cs" />
+    <Compile Include="Areas\Business\Controllers\SWFW\SWFW_DBQZQZController.cs" />
     <Compile Include="Areas\Business\Controllers\SWFW\SWFW_FLZXController.cs" />
     <Compile Include="Areas\Business\Controllers\SWFW\SWFW_FYSJController.cs" />
     <Compile Include="Areas\Business\Controllers\SWFW\SWFW_GGCMController.cs" />
     <Compile Include="Areas\Business\Controllers\SWFW\SWFW_GSZCController.cs" />
     <Compile Include="Areas\Business\Controllers\SWFW\SWFW_HYWLController.cs" />
     <Compile Include="Areas\Business\Controllers\SWFW\SWFW_HYZXController.cs" />
+    <Compile Include="Areas\Business\Controllers\SWFW\SWFW_JXSBWXController.cs" />
+    <Compile Include="Areas\Business\Controllers\SWFW\SWFW_JZWXController.cs" />
     <Compile Include="Areas\Business\Controllers\SWFW\SWFW_KDController.cs" />
     <Compile Include="Areas\Business\Controllers\SWFW\SWFW_LPDZController.cs" />
     <Compile Include="Areas\Business\Controllers\SWFW\SWFW_PHZPController.cs" />
@@ -1560,6 +1572,9 @@
     <Content Include="Areas\Business\Views\SWFW_HYZX\SWFW_HYZX.cshtml" />
     <Content Include="Areas\Business\Views\SWFW_BGSBWX\SWFW_BGSBWX.cshtml" />
     <Content Include="Areas\Business\Views\SWFW_ZL\SWFW_ZL.cshtml" />
+    <Content Include="Areas\Business\Views\SWFW_JZWX\SWFW_JZWX.cshtml" />
+    <Content Include="Areas\Business\Views\SWFW_JXSBWX\SWFW_JXSBWX.cshtml" />
+    <Content Include="Areas\Business\Views\SWFW_DBQZQZ\SWFW_DBQZQZ.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
