--- a/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
+++ b/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
@@ -159,12 +159,15 @@
     <Compile Include="BLL\SWFW\SWFW_BGSBWXBLL.cs" />
     <Compile Include="BLL\SWFW\SWFW_BXBLL.cs" />
     <Compile Include="BLL\SWFW\SWFW_CWKJPGBLL.cs" />
+    <Compile Include="BLL\SWFW\SWFW_DBQZQZBLL.cs" />
     <Compile Include="BLL\SWFW\SWFW_FLZXBLL.cs" />
     <Compile Include="BLL\SWFW\SWFW_FYSJBLL.cs" />
     <Compile Include="BLL\SWFW\SWFW_GGCMBLL.cs" />
     <Compile Include="BLL\SWFW\SWFW_GSZCBLL.cs" />
     <Compile Include="BLL\SWFW\SWFW_HYWLBLL.cs" />
     <Compile Include="BLL\SWFW\SWFW_HYZXBLL.cs" />
+    <Compile Include="BLL\SWFW\SWFW_JXSBWXBLL.cs" />
+    <Compile Include="BLL\SWFW\SWFW_JZWXBLL.cs" />
     <Compile Include="BLL\SWFW\SWFW_KDBLL.cs" />
     <Compile Include="BLL\SWFW\SWFW_LPDZBLL.cs" />
     <Compile Include="BLL\SWFW\SWFW_PHZPBLL.cs" />
