--- a/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
+++ b/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
@@ -166,12 +166,15 @@
     <Compile Include="SWFW\ISWFW_BGSBWXBLL.cs" />
     <Compile Include="SWFW\ISWFW_BXBLL.cs" />
     <Compile Include="SWFW\ISWFW_CWKJPGBLL.cs" />
+    <Compile Include="SWFW\ISWFW_DBQZQZBLL.cs" />
     <Compile Include="SWFW\ISWFW_FLZXBLL.cs" />
     <Compile Include="SWFW\ISWFW_FYSJBLL.cs" />
     <Compile Include="SWFW\ISWFW_GGCMBLL.cs" />
     <Compile Include="SWFW\ISWFW_GSZCBLL.cs" />
     <Compile Include="SWFW\ISWFW_HYWLBLL.cs" />
     <Compile Include="SWFW\ISWFW_HYZXBLL.cs" />
+    <Compile Include="SWFW\ISWFW_JXSBWXBLL.cs" />
+    <Compile Include="SWFW\ISWFW_JZWXBLL.cs" />
     <Compile Include="SWFW\ISWFW_KDBLL.cs" />
     <Compile Include="SWFW\ISWFW_LPDZBLL.cs" />
     <Compile Include="SWFW\ISWFW_PHZPBLL.cs" />
