--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -326,6 +326,8 @@
     <Content Include="Areas\Business\Css\images\zffs_wx.png" />
     <Content Include="Areas\Business\Css\images\zffs_zfb.png" />
     <Content Include="Areas\Business\Css\images\zmsmrz.png" />
+    <Content Include="Areas\Business\Css\JYPX\JYPX_JJGR.css" />
+    <Content Include="Areas\Business\Css\JYPX\JYPX_ZXXFDB.css" />
     <Content Include="Areas\Business\Css\LBXZ.css" />
     <Content Include="Areas\Business\Css\LR\LR_KQHL.css" />
     <Content Include="Areas\Business\Css\LR\LR_MFHF.css" />
@@ -569,6 +571,10 @@
     <Content Include="Areas\Business\Scripts\Business\HBSJ.js" />
     <Content Include="Areas\Business\Scripts\Business\HFCZ\HFCZ.js" />
     <Content Include="Areas\Business\Scripts\Business\HFCZ\ZFFS.js" />
+    <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_JJGR.js" />
+    <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_JJGRYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_ZXXFDB.js" />
+    <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_ZXXFDBYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\LBXZ.js" />
     <Content Include="Areas\Business\Scripts\Business\LR\LR_KQHL.js" />
     <Content Include="Areas\Business\Scripts\Business\LR\LR_KQHLYZ.js" />
@@ -1105,6 +1111,9 @@
       <SubType>Designer</SubType>
     </Content>
     <Content Include="Config\SpringConfig\BLLSWFW.xml" />
+    <Content Include="Config\SpringConfig\BLLJYPX.xml">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Config\SpringConfig\BLLZSJM.xml">
       <SubType>Designer</SubType>
     </Content>
@@ -1121,6 +1130,7 @@
     <Content Include="Config\SpringConfig\ControllersQZZP.xml" />
     <Content Include="Config\SpringConfig\ControllersSHFW.xml" />
     <Content Include="Config\SpringConfig\ControllersSWFW.xml" />
+    <Content Include="Config\SpringConfig\ControllersJYPX.xml" />
     <Content Include="Config\SpringConfig\ControllersZSJM.xml" />
     <Content Include="Config\SpringConfig\ControllersLR.xml" />
     <Content Include="Config\SpringConfig\ControllersXXYL.xml" />
@@ -1205,6 +1215,8 @@
     <Compile Include="Areas\Business\Controllers\FC\FC_XZLController.cs" />
     <Compile Include="Areas\Business\Controllers\GRZLController.cs" />
     <Compile Include="Areas\Business\Controllers\HFCZController.cs" />
+    <Compile Include="Areas\Business\Controllers\JYPX\JYPX_JJGRController.cs" />
+    <Compile Include="Areas\Business\Controllers\JYPX\JYPX_ZXXFDBController.cs" />
     <Compile Include="Areas\Business\Controllers\LBXZController.cs" />
     <Compile Include="Areas\Business\Controllers\LR\LR_KQHLController.cs" />
     <Compile Include="Areas\Business\Controllers\LR\LR_MFHFController.cs" />
@@ -1575,6 +1587,8 @@
     <Content Include="Areas\Business\Views\SWFW_JZWX\SWFW_JZWX.cshtml" />
     <Content Include="Areas\Business\Views\SWFW_JXSBWX\SWFW_JXSBWX.cshtml" />
     <Content Include="Areas\Business\Views\SWFW_DBQZQZ\SWFW_DBQZQZ.cshtml" />
+    <Content Include="Areas\Business\Views\JYPX_ZXXFDB\JYPX_ZXXFDB.cshtml" />
+    <Content Include="Areas\Business\Views\JYPX_JJGR\JYPX_JJGR.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
