--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Maps\FWCZJBXX_Map.cs" />
     <Compile Include="Maps\JCXX_Map.cs" />
     <Compile Include="Maps\JYPX\JYPX_JJGRJBXX_Map.cs" />
+    <Compile Include="Maps\JYPX\JYPX_JJJGJBXX_Map.cs" />
     <Compile Include="Maps\JYPX\JYPX_ZXXFDBJBXX_Map.cs" />
     <Compile Include="Maps\LR\LR_KQHLJBXX_Map.cs" />
     <Compile Include="Maps\LR\LR_MFHFJBXX_Map.cs" />
@@ -298,6 +299,7 @@
     <Compile Include="Models\FC\FC_ZZFJBXX.cs" />
     <Compile Include="Models\JCXX.cs" />
     <Compile Include="Models\JYPX\JYPX_JJGRJBXX.cs" />
+    <Compile Include="Models\JYPX\JYPX_JJJGJBXX.cs" />
     <Compile Include="Models\JYPX\JYPX_ZXXFDBJBXX.cs" />
     <Compile Include="Models\LR\LR_KQHLJBXX.cs" />
     <Compile Include="Models\LR\LR_MFHFJBXX.cs" />
