--- a/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
+++ b/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
@@ -95,6 +95,7 @@
     <Compile Include="BLL\FC\FC_ZZFJBXXBLL.cs" />
     <Compile Include="BLL\HFCZBLL.cs" />
     <Compile Include="BLL\JYPX\JYPX_JJGRBLL.cs" />
+    <Compile Include="BLL\JYPX\JYPX_JJJGBLL.cs" />
     <Compile Include="BLL\JYPX\JYPX_ZXXFDBBLL.cs" />
     <Compile Include="BLL\LBXXBLL.cs" />
     <Compile Include="BLL\LR\LR_KQHLBLL.cs" />
