--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -116,6 +116,8 @@
     <Compile Include="Maps\JCXX_Map.cs" />
     <Compile Include="Maps\JYPX\JYPX_JJGRJBXX_Map.cs" />
     <Compile Include="Maps\JYPX\JYPX_JJJGJBXX_Map.cs" />
+    <Compile Include="Maps\JYPX\JYPX_YYPXJGJBXX_Map.cs" />
+    <Compile Include="Maps\JYPX\JYPX_YYPXJSJBXX_Map.cs" />
     <Compile Include="Maps\JYPX\JYPX_ZXXFDBJBXX_Map.cs" />
     <Compile Include="Maps\JYPX\JYPX_ZXXYDYJBXX_Map.cs" />
     <Compile Include="Maps\LR\LR_KQHLJBXX_Map.cs" />
@@ -301,6 +303,8 @@
     <Compile Include="Models\JCXX.cs" />
     <Compile Include="Models\JYPX\JYPX_JJGRJBXX.cs" />
     <Compile Include="Models\JYPX\JYPX_JJJGJBXX.cs" />
+    <Compile Include="Models\JYPX\JYPX_YYPXJGJBXX.cs" />
+    <Compile Include="Models\JYPX\JYPX_YYPXJSJBXX.cs" />
     <Compile Include="Models\JYPX\JYPX_ZXXFDBJBXX.cs" />
     <Compile Include="Models\JYPX\JYPX_ZXXYDYJBXX.cs" />
     <Compile Include="Models\LR\LR_KQHLJBXX.cs" />
