--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -120,6 +120,7 @@
     <Compile Include="Maps\JYPX\JYPX_YYPXJSJBXX_Map.cs" />
     <Compile Include="Maps\JYPX\JYPX_ZXXFDBJBXX_Map.cs" />
     <Compile Include="Maps\JYPX\JYPX_ZXXYDYJBXX_Map.cs" />
+    <Compile Include="Maps\JYPX\JYPX_ZYJNPXJBXX_Map.cs" />
     <Compile Include="Maps\LR\LR_KQHLJBXX_Map.cs" />
     <Compile Include="Maps\LR\LR_MFHFJBXX_Map.cs" />
     <Compile Include="Maps\LR\LR_MJJBXX_Map.cs" />
@@ -307,6 +308,7 @@
     <Compile Include="Models\JYPX\JYPX_YYPXJSJBXX.cs" />
     <Compile Include="Models\JYPX\JYPX_ZXXFDBJBXX.cs" />
     <Compile Include="Models\JYPX\JYPX_ZXXYDYJBXX.cs" />
+    <Compile Include="Models\JYPX\JYPX_ZYJNPXJBXX.cs" />
     <Compile Include="Models\LR\LR_KQHLJBXX.cs" />
     <Compile Include="Models\LR\LR_MFHFJBXX.cs" />
     <Compile Include="Models\LR\LR_MJJBXX.cs" />
