--- a/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
+++ b/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
@@ -100,6 +100,7 @@
     <Compile Include="BLL\JYPX\JYPX_YYPXJSBLL.cs" />
     <Compile Include="BLL\JYPX\JYPX_ZXXFDBBLL.cs" />
     <Compile Include="BLL\JYPX\JYPX_ZXXYDYBLL.cs" />
+    <Compile Include="BLL\JYPX\JYPX_ZYJNPXBLL.cs" />
     <Compile Include="BLL\LBXXBLL.cs" />
     <Compile Include="BLL\LR\LR_KQHLBLL.cs" />
     <Compile Include="BLL\LR\LR_MFHFBLL.cs" />
