--- a/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
+++ b/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
@@ -104,6 +104,7 @@
     <Compile Include="IZHBDBLL.cs" />
     <Compile Include="JYPX\IJYPX_JJGRBLL.cs" />
     <Compile Include="JYPX\IJYPX_JJJGBLL.cs" />
+    <Compile Include="JYPX\IJYPX_XLJYBLL.cs" />
     <Compile Include="JYPX\IJYPX_YYPXJGBLL.cs" />
     <Compile Include="JYPX\IJYPX_YYPXJSBLL.cs" />
     <Compile Include="JYPX\IJYPX_ZXXFDBBLL.cs" />
