--- a/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
+++ b/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
@@ -96,6 +96,7 @@
     <Compile Include="BLL\HFCZBLL.cs" />
     <Compile Include="BLL\JYPX\JYPX_JJGRBLL.cs" />
     <Compile Include="BLL\JYPX\JYPX_JJJGBLL.cs" />
+    <Compile Include="BLL\JYPX\JYPX_XLJYBLL.cs" />
     <Compile Include="BLL\JYPX\JYPX_YYPXJGBLL.cs" />
     <Compile Include="BLL\JYPX\JYPX_YYPXJSBLL.cs" />
     <Compile Include="BLL\JYPX\JYPX_ZXXFDBBLL.cs" />
