--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -329,6 +329,7 @@
     <Content Include="Areas\Business\Css\JYPX\JYPX_JJGR.css" />
     <Content Include="Areas\Business\Css\JYPX\JYPX_JJJG.css" />
     <Content Include="Areas\Business\Css\JYPX\JYPX_XLJY.css" />
+    <Content Include="Areas\Business\Css\JYPX\JYPX_YSPX.css" />
     <Content Include="Areas\Business\Css\JYPX\JYPX_YYPXJG.css" />
     <Content Include="Areas\Business\Css\JYPX\JYPX_YYPXJS.css" />
     <Content Include="Areas\Business\Css\JYPX\JYPX_ZXXFDB.css" />
@@ -580,6 +581,8 @@
     <Content Include="Areas\Business\Scripts\Business\HFCZ\HFCZ.js" />
     <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_XLJY.js" />
     <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_XLJYYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_YSPX.js" />
+    <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_YSPXYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_YYPXJSYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\HFCZ\ZFFS.js" />
     <Content Include="Areas\Business\Scripts\Business\JYPX\JYPX_JJGR.js" />
@@ -1238,6 +1241,7 @@
     <Compile Include="Areas\Business\Controllers\JYPX\JYPX_JJGRController.cs" />
     <Compile Include="Areas\Business\Controllers\JYPX\JYPX_JJJGController.cs" />
     <Compile Include="Areas\Business\Controllers\JYPX\JYPX_XLJYController.cs" />
+    <Compile Include="Areas\Business\Controllers\JYPX\JYPX_YSPXController.cs" />
     <Compile Include="Areas\Business\Controllers\JYPX\JYPX_YYPXJGController.cs" />
     <Compile Include="Areas\Business\Controllers\JYPX\JYPX_YYPXJSController.cs" />
     <Compile Include="Areas\Business\Controllers\JYPX\JYPX_ZXXFDBController.cs" />
@@ -1621,6 +1625,7 @@
     <Content Include="Areas\Business\Views\JYPX_YYPXJS\JYPX_YYPXJS.cshtml" />
     <Content Include="Areas\Business\Views\JYPX_ZYJNPX\JYPX_ZYJNPX.cshtml" />
     <Content Include="Areas\Business\Views\JYPX_XLJY\JYPX_XLJY.cshtml" />
+    <Content Include="Areas\Business\Views\JYPX_YSPX\JYPX_YSPX.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
