--- a/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
+++ b/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
@@ -102,8 +102,10 @@
     <Compile Include="IYHJBXXBLL.cs" />
     <Compile Include="IYXCZBLL.cs" />
     <Compile Include="IZHBDBLL.cs" />
+    <Compile Include="JYPX\IJYPX_ITPXBLL.cs" />
     <Compile Include="JYPX\IJYPX_JJGRBLL.cs" />
     <Compile Include="JYPX\IJYPX_JJJGBLL.cs" />
+    <Compile Include="JYPX\IJYPX_TYPXBLL.cs" />
     <Compile Include="JYPX\IJYPX_XLJYBLL.cs" />
     <Compile Include="JYPX\IJYPX_YSPXBLL.cs" />
     <Compile Include="JYPX\IJYPX_YYPXJGBLL.cs" />
